--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
